apply plugin: 'java'

group = 'com.soikea'
description = """hiplunch"""

sourceCompatibility = 1.8
targetCompatibility = 1.8
tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
repositories {
    mavenCentral()
}

dependencies {
    compile 'com.rometools:rome:1.5.1'
    compile 'com.sun.jersey:jersey-client:1.9'
    compile 'com.sun.jersey:jersey-json:1.9'
    compile 'ch.qos.logback:logback-classic:1.1.2'
    compile 'org.apache.commons:commons-lang3:3.4'
    compile 'com.google.guava:guava:21.0'
    compile 'io.github.classgraph:classgraph:4.8.28'
    testCompile 'junit:junit:4.12'
}
jar {
    from { (configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) } }
    manifest { attributes("Main-Class": "com.soikea.hiplunch.Hiplunch" ) }
}
